[project]
name = "sip-poc"
version = "0.1.0"
description = "Agentics SIP Server demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "asyncio>=3.4.3",
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
    "wikidata>=0.8.1",
]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
